# gateway-sphere

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
.docker/test/linux/x86_64/: Dockerfile
.github/workflows/: cmake-multi-platform.yml
.scripts/: test_linux_x86_64.sh
src/: main.c
src/ip/: gateway_sphere_network_interface.c  gateway_sphere_network_interface.h  gateway_sphere_network_interface_validation.c
src/modules/ip/network_interface/: gateway_sphere_network_interface.h  gateway_sphere_network_interface_x86_64_linux.c
tests/ip/: gateway_sphere_network_interface_validation_test.c
tests/linux/x86_64/: CMakeLists.txt
tests/linux/x86_64/modules/ip/network_interface/: gateway_sphere_network_interface_x86_64_linux_test.c
